--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <body>
      
 <h1> BMI-kalkulator</h1>
-<script src="index.js"></script>
+<script src="index.js">
+    unction weight(w,h){ return (w/h); }; var w=prompt("Enter your weight"); 
+var h=prompt('enter your height'); var s=weight(w,h); console.log(s);</script>
 
   </body>
 
